# landscapes

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  landscapes-mc-converter.project  landscapes-mc-demo.project  landscapes-mc.project  landscapes-unittests.project  landscapes-zorder-genconsts.project  landscapes.project  landscapes.workspace
docs/scrap/: z_preorder_traversal.py
helpful-scripts/: build-install-cmake3.sh  download-and-build-libs-with-no-pkg.sh  download-install-cmake3.sh  install-deps-via-apt.sh
include/: pempek_assert.h
include/landscapes/: cegui.glfw3.hpp  common.math.cl.h  cpputils.hpp  debug_macro.h  mcloader.hpp  mgl2glm.hpp  opencl.shim.h  svo_buffer.fwd.hpp  svo_buffer.hpp  svo_buffer.inl.hpp  svo_camera_mapping.cl.fwd.h  svo_camera_mapping.cl.h  svo_curves.h  svo_formatters.hpp  svo_formatters.inl.hpp  svo_inttypes.h  svo_render.hpp  svo_serialization.v1.hpp  svo_slice.comparison.hpp  svo_slice_utilities.hpp  svo_tofromstr.hpp  svo_tree.block_mgmt.hpp  svo_tree.capi.h  svo_tree.fwd.hpp  svo_tree.hpp  svo_tree.inl.hpp  svo_tree.raymarch.h  svo_tree.sanity.hpp  svo_tree.slice_mgmt.hpp  svo_validenum.hpp  unused.h
include/xdsopl-sma/: kahan.hpp  pairwise.hpp  sma.hpp
scripts/: build-install-cmake3.sh  build.sh  copy-msys-dlls-to-Debug64.sh  download-and-build-cegui-dependencies.sh  download-and-build-cegui.sh  download-and-build-cnbt.sh  download-and-build-corner-cases.sh  download-and-build-cppformat.sh  download-and-build-cubelib.sh  download-and-build-freeglut.sh  download-and-build-glfw3.sh  download-and-build-glm.sh  download-and-build-googletest.sh  download-and-build-libs-with-no-pkg.sh  download-and-build-mathgeolib.sh  download-and-build-sgfxapi.sh  download-and-build-tclap.sh  download-install-cmake3.sh  download-unittest-data.sh  install-deps-via-apt.sh  rebuild.it.all.for.msys.sh
src/landscapes/: mc-converter.cpp  mc-demo.cpp  mcloader.cpp  mgl2glm.cpp  svo_buffer.cpp  svo_curves.genconsts.cpp  svo_formatters.cpp  svo_render.cpp  svo_serialization.v1.cpp  svo_slice.comparison.cpp  svo_tree.block_mgmt.cpp  svo_tree.cpp  svo_tree.sanity.cpp  svo_tree.slice_mgmt.cpp
src/unittests/: block_from_slice_data.cpp  camera_mapping.cpp  constants.cpp  entree_slices.cpp  load_mca_region.cpp  main.cpp  main.hpp  overlap_open_close_range.cpp  serialization.cpp  serialize_slice.cpp  z-order.cpp
